--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@ngx-translate/core": "^16.0.4",
     "@ngx-translate/http-loader": "^16.0.1",
-    "angular-in-memory-web-api": "^0.19.0",
     "bootstrap": "^5.3.3",
+    "json-server": "^1.0.0-beta.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
