--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "bootstrap": "^5.3.3",
     "json-server": "^1.0.0-beta.3",
     "leaflet": "^1.9.4",
+    "primeicons": "^7.0.0",
+    "primeng": "^19.0.10",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
