--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@ngx-translate/http-loader": "^16.0.1",
     "bootstrap": "^5.3.3",
     "json-server": "^1.0.0-beta.3",
+    "primeicons": "^7.0.0",
+    "primeng": "^17.18.15",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
